// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Card should render correctly with all mandatory props 1`] = `
<div
  className="Card"
>
  <div
    className="Card__Avatar Card__Avatar--Tale"
  >
     
     
  </div>
  <div
    className="Card__Info"
  >
    <div
      className="Card__Info__Main"
    >
      HDFC
    </div>
    <div
      className="Card__Info__Main__Alias"
    />
  </div>
</div>
`;

exports[`Card should render correctly with all props 1`] = `
<div
  className="Card"
>
  <div
    className="Card__Avatar Card__Avatar--Tale"
  >
     
     
  </div>
  <div
    className="Card__Info"
  >
    <div
      className="Card__Info__Main"
    >
      HDFC
    </div>
    <div
      className="Card__Info__Main__Alias"
    >
      HDFC alias
    </div>
  </div>
</div>
`;
